--- a/src/components/TasksFilter/TaskFilter.css
+++ b/src/components/TasksFilter/TaskFilter.css
@@ -33,6 +33,18 @@
   border-color: rgba(175, 47, 47, 0.2);
 }
 
+.clear-completed,
+html .clear-completed:active {
+  position: relative;
+  line-height: 20px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.clear-completed:hover {
+  text-decoration: underline;
+}
+
 @media (max-width: 430px) {
   .filters {
     bottom: 10px;
